** align echart adapter to support getData() and set chart:ChartsDrawn
** fix configurationFromWRS to correctly use unit and caption information in case of a standard cube (1rowDim/1colDim/1measure)

.Widgets
* InputField
** fix not disabled field until options model is ready (in case of wrapped optionmodels)

* fixedTableHeader
** createFixedTableHeader uses optimized and more compatible code

* createTableHeadFilter
** add option valueCaptionProvider which allows asynchronous providing of code/caption data for filter dialog

==== Release 5_4_0

.Major new features:

. Support for ECMA6
* Introduced Babel to transpile for usage in Internet Explorer
* Adjusted js loader for IE
* Using 'strict' mode now in all JS sources
* updated to jQuery 3.4.1, jQuery-UI 1.12.1

. Components: Scorecard, Cube, Charts, Export, Grid, Tree
* Added Grid Component
* Added Tree Component
* Added collapse/expand functionaly to cubes
* Reorganized CubeContextMenu and added hard toggle column sort
* Charts support for dark themes
* Charts removed some chart background grid elements for less crowded charts
* Charts add support for echarts when loading bcduiChart2, image export and some chart types are limitted
* Add support for radar chart when using it
* Cube allows dims-only and measure-only reports, for measure only, you can decide if the data should be aggregated or not
* Cube DND flyover when specifying @description on LevelRef and Measure nodes
* Renderer doesn't need an existing targetHtml nor defining one at all on creation. Member function setTargetHtml can be used to set and change target.
The Renderer either works directly with the specified element or (in case of specified via id) does an element lookup by id.
* Excel Report export moved to client side using FileSaver.js
* Detail Export got column chooser options, check exportMode attribute for a customized column export/save selection and a wrqModify callback function